--- a/package.json
+++ b/package.json
@@ -9,15 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.10.0",
+    "bcrypt": "^6.0.0",
+    "chart.js": "^4.5.0",
+    "express": "^5.1.0",
+    "html-to-image": "^1.11.13",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.2",
+    "nanoid": "^5.1.5",
+    "next": "15.3.3",
+    "next-themes": "^0.4.6",
+    "nodemon": "^3.1.10",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.3"
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.16",
+    "recharts": "^2.15.3",
+    "uninstall": "^0.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4"
   }
 }
